--- a/index.html
+++ b/index.html
@@ -5,55 +5,59 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <title>Portfolio</title>
 </head>
 <body>
-    <header>
-        <a href="#" class="logo">Logo</a>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Présentation</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </header>
 
-    <div class="presentation">
-        <img src="img/stars.png" id="stars">
-        <img src="img/moon.png" id="moon">
-        <img src="img/mountains_behind.png" id="moutainbehind">
-        <h2 id="text">Agostinelli Charles </h2>
-        <a href="#" id="btn">Explorer</a>
-        <img src="img/mountains_front.png" id="moutainfront">
+<div class="pageAccueil">
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container d-flex align-items-center justify-content-between mt-5 nav">
+            <a id="logo" class="navbar-brand text-light" href="#">LOGO</a>
+            <button class="navbar-toggler burgerNavbar" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="material-symbols-outlined">menu</span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end text-light" id="navbarNav">
+                <ul class="navbar-nav navbartext">
+                    <li class="nav-item ">
+                        <a class="nav-link text-light me-5" href="#">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light me-5" href="#">Profil</a>
+                    </li>
+                    <li>
+                        <a class="nav-link text-light me-5" href="#">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="nav-link text-light" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav><!-- BAR DE NAVIGATION-->
 
+    <div class="NomPrenom text-light ">
+        <p>Agostinelli Charles</p>
     </div>
-<div class="sec">
-    <h2>Parallax </h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consequatur debitis dolore id mollitia nulla
-        rem? Ad corporis culpa debitis dolore id non quae, sed sint totam voluptatibus? Quibusdam, sequi. Lorem ipsum dolor
-        sit amet, consectetur adipisicing elit. Alias asperiores, consequatur consequuntur earum esse illum iure molestias
-        nesciunt nobis, placeat qui quisquam ratione rem repellendus saepe tempore velit vero voluptatum. Lorem ipsum dolor
-        sit amet, consectetur adipisicing elit. At cumque dolore earum enim facilis iure laborum necessitatibus odit praesentium
-        quae qui quis, recusandae sint sit tempora. Aperiam cupiditate dolores rem. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Adipisci culpa dolor ducimus enim eum excepturi iste iure maiores necessitatibus nisi nobis non, nostrum pariatur quasi quis reprehenderit
-        suscipit velit veritatis! <br> <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consequatur debitis dolore id mollitia nulla
-        rem? Ad corporis culpa debitis dolore id non quae, sed sint totam voluptatibus? Quibusdam, sequi. Lorem ipsum dolor
-        sit amet, consectetur adipisicing elit. Alias asperiores, consequatur consequuntur earum esse illum iure molestias
-        nesciunt nobis, placeat qui quisquam ratione rem repellendus saepe tempore velit vero voluptatum. Lorem ipsum dolor
-        sit amet, consectetur adipisicing elit <br> <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consequatur debitis dolore id mollitia nulla
-        rem? Ad corporis culpa debitis dolore id non quae, sed sint totam voluptatibus? Quibusdam, sequi. Lorem ipsum dolor
-        sit amet, consectetur adipisicing elit. Alias asperiores, consequatur consequuntur earum esse illum iure molestias
-        nesciunt nobis, placeat qui quisquam ratione rem repellendus saepe tempore velit vero voluptatum. Lorem ipsum dolor
-        sit amet, consectetur adipisicing elit. At cumque dolore earum enim facilis iure laborum necessitatibus odit praesentium
-        quae qui quis, recusandae sint sit tempora. Aperiam cupiditate dolores rem. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Adipisci culpa dolor ducimus enim eum excepturi iste iure maiores necessitatibus nisi nobis non, nostrum pariatur quasi quis reprehenderit
-        suscipit velit veritatis!
-    </p>
+    <div class="textDev text-light ">
+        <p>Développeur Web - Full Stack</p>
+    </div>
+    <div class="textDev text-light ">
+        <button type="button" class="btn btn-outline-info mt-2">Qui suis-je</button>
+    </div>
 </div>
+<div class="pageAcceuilPres">
+
+
+</div>
+
+<div class="imageVolatile">
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
